# dotfiles

./: .gitignore  LICENSE  README.md  install.sh
git/: .gitattributes  .gitconfig  .gitignore  .gitsecrets.example  install.sh
macos/: Brewfile  defaults.sh  install.sh
misc/: .vimrc  .wgetrc  clash.yaml.example  continue.json  install.sh  tvnamer.json
python/: install.sh  pyproject.toml  pytorch_test_mps.py  requirements.md
scripts/: fetch_movies_name-year.py  gallary_renamer.sh  organize_movies.sh  rename_to_date.py
vscode/: install.sh  keybindings.json  settings.json
zsh/: .zprofile  .zshenv  .zshrc  aliases.zsh  exports.zsh  install.sh  secrets.zsh.example
